remove boostrap, fix layout display incorrectly on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,14 @@ section.custom-section {
   /* transform: scale(0.8); */
   /* scale: 0.8; */
   position: absolute;
-  top: 3.6rem; 
+  top: 3.5rem; 
   left: 0rem;
   display: none;
   z-index: 1000; /* Add this line */
+}
+
+.avim-control-btn input[type="radio"] {
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
